test/corpus/files.txt
===============================================================================
Files (Empty)
===============================================================================

%files

-------------------------------------------------------------------------------

(spec
  (files
    (section_name)))

===============================================================================
Files (Simple Path)
===============================================================================

%files
/usr/bin/tree-sitter

-------------------------------------------------------------------------------

(spec
  (files
    (section_name)
    (file
      (string
        (string_content)))))

===============================================================================
Files (Expansion)
===============================================================================

%files
%{_mandir}/*/*

-------------------------------------------------------------------------------

(spec
  (files
    (section_name)
    (file
      (string
        (macro_expansion
          (identifier))
      (string_content)))))

===============================================================================
Files (-n)
===============================================================================

%files -n subpackage
/usr/bin/tree-sitter

-------------------------------------------------------------------------------

(spec
  (files
    (section_name)
    (word)
    (file
      (string
        (string_content)))))

===============================================================================
Files (-f)
===============================================================================

%files -f files.list

-------------------------------------------------------------------------------

(spec
  (files
    (section_name)
    (word)))

===============================================================================
Files (%defattr)
===============================================================================

%files
%defattr(-,root,root)
/usr/bin/file

-------------------------------------------------------------------------------

(spec
  (files
    (section_name)
    (defattr)
    (file
      (string (string_content)))))

===============================================================================
Files (%attr)
===============================================================================

%files
%attr(-, root, root) /usr/bin/file

-------------------------------------------------------------------------------

(spec
  (files
    (section_name)
    (file
      (attr)
      (string
        (string_content)))))

===============================================================================
Files (%attr + %dir)
===============================================================================

%files
%attr(0770,root, group) %dir /path/

-------------------------------------------------------------------------------

(spec
  (files
    (section_name)
    (file
      (attr)
      (file_qualifier)
      (string
        (string_content)))))

===============================================================================
Files (%config)
===============================================================================

%files
%config /etc/tree-sitter.conf

-------------------------------------------------------------------------------

(spec
  (files
    (section_name)
    (file
      (file_qualifier)
      (string
        (string_content)))))

===============================================================================
Files (%doc)
===============================================================================

%files
%doc README NEWS

-------------------------------------------------------------------------------

(spec
  (files
    (section_name)
    (file
      (file_qualifier)
      (string
        (string_content)))))

===============================================================================
Files (%dir)
===============================================================================

%files
%dir /usr/bin/

-------------------------------------------------------------------------------

(spec
  (files
    (section_name)
    (file
      (file_qualifier)
      (string
        (string_content)))))

===============================================================================
Files (%dir with variables)
===============================================================================

%files
%dir %{_bindir}

-------------------------------------------------------------------------------

(spec
  (files
    (section_name)
    (file
      (file_qualifier)
      (string
        (macro_expansion
          (identifier))))))

===============================================================================
Files (%license)
===============================================================================

%files
%license LICENSE
%license NOTICES.txt

-------------------------------------------------------------------------------

(spec
  (files
    (section_name)
    (file
      (file_qualifier)
      (string
        (string_content)))
    (file
      (file_qualifier)
      (string
        (string_content)))))

===============================================================================
Files (%license with multiple files)
===============================================================================

%files
%license LICENSE NOTICES.txt

-------------------------------------------------------------------------------

(spec
  (files
    (section_name)
    (file
      (file_qualifier)
      (string
        (string_content)))))

===============================================================================
Files (%verify)
===============================================================================

%files
%verify(not size filedigest mtime) %{prefix}/bin/file

-------------------------------------------------------------------------------

(spec
  (files
    (section_name)
    (file
      (file_qualifier
        (verify))
      (string
        (macro_expansion
          (identifier))
        (string_content)))))

===============================================================================
Files (%ifarch)
===============================================================================

%files
%ifarch x86_64
%{_bindir}/file
%endif

-------------------------------------------------------------------------------

(spec
  (files
    (section_name)
    (ifarch_statement
      (arch
        (identifier))
      (file
        (string
          (macro_expansion
            (identifier))
          (string_content))))))

===============================================================================
Files (%config with parameters)
:skip
===============================================================================

%files
%config(noreplace) /etc/myapp.conf
%config(missingok) /etc/optional.conf

-------------------------------------------------------------------------------

===============================================================================
Files (shell globbing patterns)
===============================================================================

%files
%{_bindir}/*
/etc/myapp/*.conf
/usr/share/myapp/[abc]*
/var/log/myapp/*.log

-------------------------------------------------------------------------------

(spec
  (files
    (section_name)
    (file
      (string
        (macro_expansion
          (identifier))
        (string_content)))
    (file
      (string
        (string_content)))
    (file
      (string
        (string_content)))
    (file
      (string
        (string_content)))))

===============================================================================
Files (complex %attr expressions)
:skip
===============================================================================

%files
%attr(%{file_mode},%{file_user},%{file_group}) %{_bindir}/myapp

-------------------------------------------------------------------------------
