test/corpus/preamble.txt
===============================================================================
Preamble Section (Name/Word)
===============================================================================

Name:           tree-sitter-rpmspec

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word))))

===============================================================================
Preamble Section (Name/Variable)
===============================================================================

Name:           %complex_name

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (macro_simple_expansion
        (identifier)))))

===============================================================================
Preamble Section (Version/Complex)
===============================================================================

Name:           tree-sitter-rpmspec
Version:        1.1~rc1

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (tag)
      (version))))

===============================================================================
Preamble Section (Release/Simple Expansion)
===============================================================================

Name:           tree-sitter-rpmspec
Release:        %autorelease

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (tag)
      (macro_simple_expansion
        (identifier)))))

===============================================================================
Preamble Section (Release/Expansion)
===============================================================================

Name:           tree-sitter-rpmspec
Release:        1%{?dist}

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (tag)
      (concatenation
        (integer)
        (macro_expansion
          (conditional_expansion
            (identifier)))))))

===============================================================================
Preamble Section (Summary/String)
===============================================================================

Name:           tree-sitter-rpmspec
Summary:        A parser for RPM Spec

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (tag)
      (concatenation
        (word)
        (word)
        (word)
        (word)
        (word)))))

===============================================================================
Preamble Section (Summary/String/Expansion)
===============================================================================

Name:           tree-sitter-rpmspec
Summary:        A parser for RPM Spec version %{version}

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (tag)
      (concatenation
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (macro_expansion
          (identifier))))))

===============================================================================
Preamble Section (License/String)
===============================================================================

Name:           tree-sitter-rpmspec
License:        MIT

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (tag)
      (word))))

===============================================================================
Preamble Section (URL/String)
===============================================================================

Name:           tree-sitter-rpmspec
URL:            https://gitlab.com/cryptomilk/tree-sitter-rpmspec

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (tag)
      (word))))

===============================================================================
Preamble Section (Source/String)
===============================================================================

Name:           tree-sitter-rpmspec
Source:         %{name}-%{version}.tar.gz

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (tag)
      (concatenation
        (macro_expansion
          (identifier))
        (word)
        (macro_expansion
          (identifier))
        (word)))))

===============================================================================
Preamble Section (Source0/String)
===============================================================================

Name:           tree-sitter-rpmspec
Source0:        %{name}-%{version}.tar.gz

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (tag)
      (concatenation
        (macro_expansion
          (identifier))
        (word)
        (macro_expansion
          (identifier))
        (word)))))

===============================================================================
Preamble Section (Patch0/String)
===============================================================================

Name:           tree-sitter-rpmspec
Patch0:         fix-xyz.patch

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (tag)
      (word))))

===============================================================================
Preamble Section (BuildRequires/String)
===============================================================================

Name:           tree-sitter-rpmspec
BuildRequires:  tree-sitter-cli

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (dependency_tag)
      (word))))

===============================================================================
Preamble Section (Requires/String)
===============================================================================

Name:           tree-sitter-rpmspec
Requires(pre):  tree-sitter-cli

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (dependency_tag
        (qualifier))
      (word))))

===============================================================================
Preamble Section (Requires/List)
===============================================================================

Name:           tree-sitter-rpmspec
Requires:       pkgA, pkgB

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (dependency_tag)
      (concatenation
        (word)
        (word)))))

===============================================================================
Preamble Section (Requires/Conditional)
===============================================================================

Name:           tree-sitter-rpmspec
Requires:       (tree-sitter-cli or tree-sitter-cli2)

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (dependency_tag)
      (parenthesized_expression
        (boolean_operator
          (word)
          (word))))))

===============================================================================
Preamble Section (Requires/Conditional/With Version)
===============================================================================

Name:           tree-sitter-rpmspec
Requires:       ( pkgA >= 1.2.3 or pkgB )

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (dependency_tag)
      (parenthesized_expression
        (boolean_operator
          (comparison_operator
            (word)
            (version))
          (word))))))

===============================================================================
Preamble Section (Provides)
===============================================================================

Name:           tree-sitter-rpmspec
Provides:       tree-sitter-rpm-spec = bar

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (dependency_tag)
      (concatenation
        (word)
        (word)
        (word)))))

===============================================================================
Preamble Section (Requires with version operators)
:skip
===============================================================================

Name:           tree-sitter-rpmspec
Requires:       cmake >= 3.10
Requires:       gcc < 12.0
BuildRequires:  python3 >= 3.8.0

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (dependency_tag)
      (concatenation
        (word)
        (word)
        (float))))
  (preamble
    (tags
      (dependency_tag)
      (concatenation
        (word)
        (word)
        (float))))
  (preamble
    (tags
      (dependency_tag)
      (concatenation
        (word)
        (word)
        (version)))))

===============================================================================
Preamble Section (Complex boolean dependencies)
:skip
===============================================================================

Name:           tree-sitter-rpmspec
Requires:       (package1 >= 1.0 and package2) or package3

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (dependency_tag)
      (concatenation
        (parenthesized_expression
          (boolean_operator
            (comparison_operator
              (word)
              (float))
            (word)))
        (word)
        (word)))))

===============================================================================
Preamble Section (Epoch in dependencies)
:skip
===============================================================================

Name:           tree-sitter-rpmspec
Requires:       package = 2:1.0.0-1
BuildRequires:  another-package >= 1:2.0.0

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (dependency_tag)
      (concatenation
        (word)
        (word)
        (word))))
  (preamble
    (tags
      (dependency_tag)
      (concatenation
        (word)
        (word)
        (word)))))

===============================================================================
Preamble Section (Virtual capabilities with complex naming)
:skip
===============================================================================

Name:           tree-sitter-rpmspec
Provides:       virtual(capability-name) = 1.0
Requires:       capability(feature.subfeature)

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (dependency_tag)
      (concatenation
        (word)
        (parenthesized_expression
          (word))
        (word)
        (float))))
  (preamble
    (tags
      (dependency_tag)
      (concatenation
        (word)
        (parenthesized_expression
          (word))))))
